Better server structure. Added initial user creation

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,2 +1,10 @@
-FROM node:alpine
+FROM node:16-alpine
 
+WORKDIR /code/
+
+ADD package.json .
+ADD package-lock.json .
+
+RUN npm ci
+
+ENTRYPOINT [ "/bin/sh", "-c", "npm run prisma deploy" ]
