--- a/server/package.json
+++ b/server/package.json
@@ -2,19 +2,24 @@
   "name": "hothost-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "cross-env ENV=local nodemon src/index.js",
+    "prisma": "prisma"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.13.0",
     "express": "^4.18.1",
     "hbs": "^4.2.0",
-    "node-rsa": "^1.1.1"
+    "node-rsa": "^1.1.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.16",
+    "prisma": "^3.13.0",
     "tailwindcss": "^3.0.24"
   }
 }
