--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.13.0",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "node-rsa": "^1.1.1",
     "uuid": "^8.3.2"
   },
