--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "express-formidable": "^1.2.0",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
@@ -21,6 +22,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.16",
     "prisma": "^3.13.0",
