--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "cross-env ENV=local nodemon src/index.js",
+    "start": "npm run watch-tailwindcss && npm run dev",
+    "dev": "cross-env ENV=local nodemon src/index.js",
+    "watch-tailwindcss": "npx tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch",
     "prisma": "prisma"
   },
   "author": "",
