--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "npm run watch-tailwindcss && npm run dev",
-    "dev": "cross-env ENV=local nodemon src/index.js",
+    "start": "cross-env ENV=local nodemon src/index.js",
     "watch-tailwindcss": "npx tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch",
     "prisma": "prisma"
   },
@@ -18,7 +17,7 @@
     "express": "^4.18.1",
     "express-formidable": "^1.2.0",
     "flowbite": "^1.4.4",
-    "hbs": "^4.2.0",
+    "express-handlebars": "^6.0.5",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "node-rsa": "^1.1.1",
