Renamed env variables. Added online check

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:16-alpine
 
+ENV DATABASE_URL="file:/var/lib/hothost/data.db"
 WORKDIR /code/
 
 ADD package.json .
@@ -7,4 +8,8 @@ ADD package-lock.json .
 
 RUN npm ci
 
-ENTRYPOINT [ "/bin/sh", "-c", "npm run prisma deploy" ]
+ADD . .
+RUN ./node_modules/.bin/tailwindcss -i ./static/css/input.css -o ./static/css/output.css
+RUN ./node_modules/.bin/prisma generate
+
+CMD [ "/bin/sh", "-c", "./node_modules/.bin/prisma migrate deploy && node src/index.js" ]
