--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "cross-env ENV=local DATABASE_URL=./dev.db nodemon src/index.js",
+    "start": "cross-env ENV=local DATABASE_URL=file:./dev.db nodemon src/index.js",
     "watch-tailwindcss": "npx tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch",
     "prisma": "prisma",
-    "migrate": "cross-env DATABASE_URL=./dev.db npm run prisma migrate dev"
+    "migrate": "cross-env DATABASE_URL=file:./dev.db npm run prisma migrate dev"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +20,6 @@
     "flowbite": "^1.4.4",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
-    "node-rsa": "^1.1.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
