--- a/server/package.json
+++ b/server/package.json
@@ -3,30 +3,26 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "start": "cross-env ENV=local DATABASE_URL=file:./dev.db nodemon src/index.js",
-    "watch-tailwindcss": "npx tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch",
-    "prisma": "prisma",
-    "migrate": "cross-env DATABASE_URL=file:./dev.db npm run prisma migrate dev"
+    "start": "cross-env ENV=local nodemon src/index.js",
+    "watch-tailwindcss": "cd html && npm run watch-tailwindcss"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^3.13.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "express-formidable": "^1.2.0",
     "express-handlebars": "^6.0.5",
-    "flowbite": "^1.4.4",
     "jsonwebtoken": "^8.5.1",
+    "lowdb": "^3.0.0",
     "md5": "^2.3.0",
+    "sqlite3": "^5.0.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.0",
     "cross-env": "^7.0.3",
-    "nodemon": "^2.0.16",
-    "prisma": "^3.13.0",
-    "tailwindcss": "^3.0.24"
+    "nodemon": "^2.0.16"
   }
 }
