--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "cross-env ENV=local nodemon src/index.js",
+    "start": "cross-env ENV=local nodemon --ignore data/ src/index.js",
     "watch-tailwindcss": "cd html && npm run watch-tailwindcss"
   },
   "author": "",
@@ -18,7 +18,6 @@
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^3.0.0",
     "md5": "^2.3.0",
-    "sqlite3": "^5.0.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
