--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^3.0.0",
     "md5": "^2.3.0",
+    "node-fetch": "^3.2.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
