--- a/server/html/package.json
+++ b/server/html/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "tailwind.config.js",
   "scripts": {
-    "watch-tailwindcss": "npx tailwindcss -i ../static/css/input.css -o ../static/css/output.css --watch"
+    "watch-tailwindcss": "npx tailwindcss -i input.css -o ../static/css/output.css --watch"
   },
   "author": "",
   "license": "ISC",
