--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^6.0.5",
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^3.0.0",
+    "markdown-it": "^13.0.1",
     "md5": "^2.3.0",
     "node-fetch": "^3.2.4",
     "uuid": "^8.3.2"
