--- a/server/html/package.json
+++ b/server/html/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.1",
+    "@tailwindcss/typography": "^0.5.2",
     "tailwindcss": "^3.0.24"
   }
 }
