--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "express-formidable": "^1.2.0",
     "express-handlebars": "^6.0.5",
+    "humanize-duration": "^3.27.1",
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^3.0.0",
     "markdown-it": "^13.0.1",
