add procps to docker agent

--- a/hothost-agent/Dockerfile
+++ b/hothost-agent/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine
 
-RUN apk update && apk add bash curl
+RUN apk update && apk add bash curl procps
 ADD getinfo.sh .
 
 CMD [ "bash", "getinfo.sh" ]
