--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -12,7 +12,8 @@
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.1.11",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
