--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -13,6 +13,7 @@
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.1.11",
     "react": "^18.2.0",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2"
   },
