--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.2.0",
+    "react-donut-chart": "^1.3.3",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.2"
   },
