--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-donut-chart": "^1.3.3",
     "react-query": "^3.39.2",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
