--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.1",
     "express-formidable": "^1.2.0",
     "express-handlebars": "^6.0.5",
+    "get-ssl-certificate": "^2.3.3",
     "https": "^1.0.0",
     "humanize-duration": "^3.27.1",
     "jsonwebtoken": "^8.5.1",
