--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -7,7 +7,6 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
-   
   },
   "dependencies": {
     "flowbite": "^1.5.3",
@@ -16,6 +15,7 @@
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.2.0",
     "react-donut-chart": "^1.3.3",
+    "react-loading-skeleton": "^3.1.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.2",
     "validator": "^13.7.0"
