--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "cross-env ENV=local nodemon --ignore data/ src/index.js",
     "watch-tailwindcss": "cd html && npm run watch-tailwindcss",
-    "test": "cross-env ENV=local nodemon --ignore data/ src/index.js"
+    "test": " cross-env ENV=local nodemon --ignore data/ --inspect  src/index.js"
   },
   "author": "",
   "license": "ISC",
