--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,6 @@
     "express": "^4.18.1",
     "express-formidable": "^1.2.0",
     "express-handlebars": "^6.0.5",
-    "get-ssl-certificate": "^2.3.3",
     "https": "^1.0.0",
     "humanize-duration": "^3.27.1",
     "jsonwebtoken": "^8.5.1",
@@ -25,6 +24,7 @@
     "lowdb": "^3.0.0",
     "markdown-it": "^13.0.1",
     "md5": "^2.3.0",
+    "ssl-checker": "^2.0.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
