--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "lowdb": "^3.0.0",
     "markdown-it": "^13.0.1",
     "md5": "^2.3.0",
+    "rss-parser": "^3.12.0",
     "ssl-checker": "^2.0.7",
     "uuid": "^8.3.2"
   },
