--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "express-formidable": "^1.2.0",
     "express-handlebars": "^6.0.5",
+    "html-to-text": "^9.0.3",
     "https": "^1.0.0",
     "humanize-duration": "^3.27.1",
     "jsonwebtoken": "^8.5.1",
