--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 56558",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
